[package]
name = "rust-pwclip"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>"]

[dependencies]
clear_on_drop = "0.2.3"
data-encoding = "2.1.1"
hmac-drbg = "0.1.2"
rust-scrypt = "1.3.0"
serde = "1.0.82"
serde_derive = "1.0.82"
sha2 = "0.6.0"
toml = "0.4.6"
typenum = "1.9"
unicode-segmentation = "1.2.1"
