[package]
name = "pwclip-rs"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>"]

[dependencies]
clear_on_drop = "0.2.5"
data-encoding = "2.3.3"
hmac-drbg = { git = "https://github.com/henrytill/rust-hmac-drbg.git", branch = "update" }
rust-scrypt = "1.3.0"
serde = { version = "1.0.159", features = ["derive"] }
sha2 = "0.10.6"
toml = "0.7.3"
typenum = "1.16.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
anyhow = "1.0.70"
